--- a/detail.html
+++ b/detail.html
@@ -39,9 +39,33 @@
     </section>
 
 
+    <section class="main__section section" >
+   <div class="ul__div--li" >
+    <h1 class="ul__h1--div" >
+        Productos Relacionados
+      <h1>
+      <ul id="ul__api" class="article__ul ">
 
-
+        </ul>
+    </div>
+  </section>
+      <!-- Aqui colocamos los productos relacionados -->
+   
+        <footer class="main__section section" id="footer">
+          <h1 class="ul__h1--div" id="footer__titulo">
+            Mantente en contacto
+          </h1>
+          <h2  id="footer__subtitulo">
+            !Suscribete para recibir noticias de productos y descuentos especiales!
+          </h2>
+          <form action="" method="POST" id="formulario">
+            <input type="email" name="email" id="email" placeholder="Escribe tu email" required>
+            <input type="submit" value="Suscribirse" id="botton">  
+          </form>
+        </footer>
   </main>
+
+ 
 
 
 
